--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,8 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: corney_island_wireless
+    shield: corney_island_left
+  - board: corney_island_wireless
+    shield: corney_island_right
