Add the display feature

--- a/boards/shields/corney_island/corney_island.zmk.yml
+++ b/boards/shields/corney_island/corney_island.zmk.yml
@@ -7,6 +7,7 @@ requires: [pro_micro]
 exposes: [i2c_oled]
 features:
   - keys
+  - display
 siblings:
   - corney_island_left
   - corney_island_right
