--- a/boards/shields/corney_island/corney_island.conf
+++ b/boards/shields/corney_island/corney_island.conf
@@ -10,3 +10,10 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Uncomment the following lines to enable the Nice!view Display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_SSD1306=n
+
+# Uncomment to turn off WPM Status.
+# CONFIG_ZMK_WIDGET_WPM_STATUS=n
