--- a/build.yaml
+++ b/build.yaml
@@ -20,5 +20,15 @@
 include:
   - board: nice_nano_v2
     shield: corney_island_left nice_view
+    artifact-name: corney_island_left
   - board: nice_nano_v2
     shield: corney_island_right nice_view
+    artifact-name: corney_island_right
+  - board: nice_nano_v2
+    shield: corney_island_left nice_view
+    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+    artifact-name: corney_island_left_with_logging
+  - board: nice_nano_v2
+    shield: corney_island_right nice_view
+    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+    artifact-name: corney_island_right_with_logging
