Update display widgets configuration

--- a/boards/shields/corney_island/corney_island.conf
+++ b/boards/shields/corney_island/corney_island.conf
@@ -15,5 +15,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 CONFIG_ZMK_DISPLAY=y
 CONFIG_SSD1306=n
 
-# Uncomment to turn off WPM Status.
-# CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# Disable the WPM widget
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# Display battery as n%
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
